-changed pagination to 100 results/page, added some sample data to do some testing -fixed module stacking when the screen is too small--TO DO: make the middguard header (control panel) full height

--- a/packages/vast2015/modules/sql-view/sql-styles.css
+++ b/packages/vast2015/modules/sql-view/sql-styles.css
@@ -36,6 +36,9 @@
 .table-view{
   margin: 5px;
 }
+.table-view-wrapper{
+  overflow-y: scroll;
+}
 .model-name-text{
   display: inline-block;
   height: 100%;
